--- a/src/styles/Dot.css
+++ b/src/styles/Dot.css
@@ -13,25 +13,25 @@
 .dot:hover {
   transform: scale(1.25);
   z-index: 1000;
-  outline: 1px solid rgba(255, 255, 255, 1);
+  outline: 1px solid rgba(125, 125, 125, 1);
 }
 
 .dot.active {
   z-index: 2;
-  border: 0.1px solid rgba(255, 255, 255, 1);
-  animation: 2s activePulse 1s ease-out infinite;
+  border: 0.1px solid rgba(125, 125, 125, 1);
+  animation: 1.5s activePulse 0.5s ease-out infinite;
 }
 
 .dot.selected {
   z-index: 4;
-  border: 0.1px solid rgba(255, 255, 255, 1);
-  animation: 2s selectedPulse 1s ease-out infinite;
+  border: 0.1px solid rgba(125, 125, 125, 1);
+  animation: 1.5s selectedPulse 0.5s ease-out infinite;
 }
 
 .dot.selected.active {
   z-index: 5;
-  border: 0.1px solid var(--color-neutral-00);
-  animation: 2s selectedActivePulse 1s ease-out infinite;
+  border: 0.1px solid rgba(125, 125, 125, 1);
+  animation: 1.5s selectedActivePulse 0.5s ease-out infinite;
 }
 
 .dot.selected:hover {
